lets go to ork...

--- a/client/src/app/hrdashboard/components/dashboard/dashboard.component.html
+++ b/client/src/app/hrdashboard/components/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
       <ul>
         <li class="active">  <i class="bi bi-speedometer2"></i> Dashboard</li>
         <li (click)="navigateToNewHires()" style="cursor: pointer;"><i class="bi bi-people"></i> Employees</li>
-        <li><i class="bi bi-layout-text-window-reverse"></i> Templates</li>
+        <li (click)="navigateToTemplates()" style="cursor: pointer;"><i class="bi bi-layout-text-window-reverse"></i> Templates</li>
         <li><i class="bi bi-list-task"></i> Routine</li>
       </ul>
     </nav>
